[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Images/Player/char_player.png" type="Texture" id=1]
[ext_resource path="res://Assets/InteractableComponent.gd" type="Script" id=2]
[ext_resource path="res://Entities/Player/Player.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 1.59181 )

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 1.3
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.7, 1.4 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Sprite:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0.2, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.7, 1.4 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Sprite:scale:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.982, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.9, 1.4 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Sprite:scale:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.97, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.7, 1.4 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Sprite:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=3]
length = 0.4
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Sprite:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -1.5, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, -1.5, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Sprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -5, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 5, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 )
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 6.6152, 2.68428 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 7.9705, 13.3683 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 2 )
anims/Run = SubResource( 3 )

[node name="InteractableComponent" type="Area2D" parent="."]
position = Vector2( 8, 16 )
collision_layer = 4
collision_mask = 0
script = ExtResource( 2 )
interactable_parent = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractableComponent"]
shape = SubResource( 4 )

[node name="InteractionTimer" type="Timer" parent="InteractableComponent"]
wait_time = 0.25
one_shot = true

[connection signal="body_entered" from="InteractableComponent" to="InteractableComponent" method="_on_InteractableComponent_body_entered"]
[connection signal="body_exited" from="InteractableComponent" to="InteractableComponent" method="_on_InteractableComponent_body_exited"]
[connection signal="on_interact" from="InteractableComponent" to="." method="_on_InteractableComponent_on_interact"]
